force-app/main/default/objects/BMCServiceDesk__BMC_OperatingSystem__c/BMCServiceDesk__BMC_OperatingSystem__c.object-meta.xml
<CustomObject>
    <description>Class that stores information about software or firmware that controls the operation of a computer and directs the processing of programs. This class corresponds to the DMTF CIM_OperatingSystem class.</description>
    <label>Operating System</label>
    <nameField>
        <label>BMC_OperatingSystem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operating Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>