force-app/main/default/objects/BMCServiceDesk__BMC_OperatingSystem__c/fields/BMCServiceDesk__CountryCode__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CountryCode__c</fullName>
    <label>Country Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>