force-app/main/default/objects/BMCServiceDesk__BMC_OperatingSystem__c/fields/BMCServiceDesk__OSType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__OSType__c</fullName>
    <label>OS Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>MACOS</fullName>
            </value>
            <value>
                <fullName>ATTUNIX</fullName>
            </value>
            <value>
                <fullName>DGUX</fullName>
            </value>
            <value>
                <fullName>DECNT</fullName>
            </value>
            <value>
                <fullName>Tru64 UNIX</fullName>
            </value>
            <value>
                <fullName>Open VMS</fullName>
            </value>
            <value>
                <fullName>HPUX</fullName>
            </value>
            <value>
                <fullName>AIX</fullName>
            </value>
            <value>
                <fullName>z/OS</fullName>
            </value>
            <value>
                <fullName>OS400</fullName>
            </value>
            <value>
                <fullName>OS/2</fullName>
            </value>
            <value>
                <fullName>JavaVM</fullName>
            </value>
            <value>
                <fullName>MSDOS</fullName>
            </value>
            <value>
                <fullName>WIN3x</fullName>
            </value>
            <value>
                <fullName>WIN95</fullName>
            </value>
            <value>
                <fullName>WIN98</fullName>
            </value>
            <value>
                <fullName>WINNT</fullName>
            </value>
            <value>
                <fullName>WINCE</fullName>
            </value>
            <value>
                <fullName>NCR3000</fullName>
            </value>
            <value>
                <fullName>NetWare</fullName>
            </value>
            <value>
                <fullName>OSF</fullName>
            </value>
            <value>
                <fullName>DC/OS</fullName>
            </value>
            <value>
                <fullName>Reliant UNIX</fullName>
            </value>
            <value>
                <fullName>SCO UnixWare</fullName>
            </value>
            <value>
                <fullName>SCO Open Server</fullName>
            </value>
            <value>
                <fullName>Sequent</fullName>
            </value>
            <value>
                <fullName>IRIX</fullName>
            </value>
            <value>
                <fullName>Solaris</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>