force-app/main/default/objects/BMCServiceDesk__BMC_OperatingSystem__c/fields/BMCServiceDesk__PAEEnabled__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PAEEnabled__c</fullName>
    <label>PAE Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>