force-app/main/default/objects/BMCServiceDesk__BMC_OperatingSystem__c/fields/BMCServiceDesk__SystemDirectory__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SystemDirectory__c</fullName>
    <label>System Directory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>